add rfkill actions to sysactions.conf - necessary for bluez
so bluez itself wont go rfkill block or unblock the bt device. you
have to rfkill unblock separately if it's blocked. this is needed to
make bluez at a minimum work right. possibly should be added to
connman too. but this is the first step.

--- a/data/etc/sysactions.conf.in
+++ b/data/etc/sysactions.conf.in
@@ -51,6 +51,8 @@ action:   /bin/mount     @MOUNT@
 action:   /bin/umount    @UMOUNT@
 action:   /usr/bin/eject @EJECT@
 action:   l2ping         /usr/bin/l2ping
+action:   rfkill-unblock /bin/rfkill unblock
+action:   rfkill-block   /bin/rfkill block
 
 # root is allowed to do anything - but it needs to be here explicitly anyway
 user:     root      allow: *
