emxier desktop - fix categories to match well known cat names
Audio is not a well known/valid one. AudioVideo is. fixes T5076

@fix

--- a/src/modules/mixer/emixer.desktop
+++ b/src/modules/mixer/emixer.desktop
@@ -18,5 +18,5 @@ Comment[it]=Un modulo per controllare il volume dell'audio e degli stream.
 Comment[ms]=Modul untuk mengawal volum dan strim audio.
 Comment[sr]=Јединица за управљање јечином звука и токова.
 Comment[tr]=Ses seviyesi ve ses akışı kontrol modülü.
-Categories=Audio;System;
+Categories=AudioVideo;System;
 StartupWMClass=emixer
