e wizard - fix symbol linking for pages by exposing syms explicitly
wizard module was relying on implicit symbol linking for pages. since
i chnaged dlopens to be local this broke page loading. this local
dlopen change is all about not leaking symbols into the global table
which is good/right, but this stops the wixzard setup from working, so
move to explicitly exposing symbols to the modules in a struct.

--- a/src/modules/wizard/meson.build
+++ b/src/modules/wizard/meson.build
@@ -1,7 +1,9 @@
 src = files(
   'e_mod_main.c',
   'e_wizard.c',
-  'e_wizard.h'
+  'e_wizard.h',
+  'e_wizard_api.h',
+  'e_wizard_priv.h'
  )
 
 if get_option(m) == true
