build: e_gadget_loader is using dlsym
but is not explicitly linking against it. Previously this was not
discovered due to a wrong flag in elementaries pkgconfig. However - the
new .pc file of elementary does not contain dl anymore (as no library
_needs_ to link against it when using elm). So we need to link this here
explicitly

Differential Revision: https://phab.enlightenment.org/D7150

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -578,6 +578,7 @@ if config_h.has('HAVE_WAYLAND') == true
 		name_prefix: '',
 		include_directories: include_directories('../..'),
 		dependencies: [
+      dep_dl,
 			dependency('elementary'),
 			dependency('ecore-wl2'),
 			dependency('wayland-client'),
