meson make sure to update timestamp of installed script files and +x
enlightenment_remote was not getting timestamp updated. this should
fix that and ensure its executable too.

--- a/data/tools/meson.build
+++ b/data/tools/meson.build
@@ -1,3 +1,5 @@
 install_data('enlightenment_remote',
              install_dir: dir_bin
             )
+o = join_paths(dir_bin, 'enlightenment_remote')
+meson.add_install_script(chmod, 'a+r+x', o)
