meson - use install_mode

--- a/data/config/default/meson.build
+++ b/data/config/default/meson.build
@@ -8,15 +8,12 @@ src = [
 i = 0
 foreach cd: src
   custom_target(' '.join(['config_dist', dir, cd]),
-		input      : cd + '.src',
-		output     : cd + '.cfg',
-		command    : [eet_cmd, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
-		install    : true,
-		install_dir: join_paths(dir_config, dir)
+		input        : cd + '.src',
+		output       : cd + '.cfg',
+		command      : [eet_cmd, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
+		install      : true,
+		install_dir  : join_paths(dir_config, dir),
+                install_mode : 'rw-r--r--'
                )
   i += 1
-endforeach
-foreach cd: src
-  o = join_paths(dir_config, dir, cd + '.cfg')
-  meson.add_install_script(chmod, 'a+r', o)
 endforeach
