--- a/data/config/meson.build
+++ b/data/config/meson.build
@@ -7,14 +7,13 @@ if eet_cmd == ''
 endif
 
 custom_target('profile.src',
-              input      : 'profile.src',
-              command    : [eet_cmd, '-i', '@OUTPUT@', 'config', '@INPUT@', '1'],
-              output     : ['profile.cfg'],
-              install    : true,
-              install_dir: dir_config
+              input        : 'profile.src',
+              command      : [eet_cmd, '-i', '@OUTPUT@', 'config', '@INPUT@', '1'],
+              output       : ['profile.cfg'],
+              install      : true,
+              install_dir  : dir_config,
+              install_mode : 'rw-r--r--'
              )
-out = join_paths(dir_config, 'profile.cfg')
-meson.add_install_script(chmod, 'a+r', out)
 
 subdir('default')
 subdir('mobile')
