--- a/data/tools/meson.build
+++ b/data/tools/meson.build
@@ -1,5 +1,4 @@
 install_data('enlightenment_remote',
-             install_dir: dir_bin
+             install_dir  : dir_bin,
+             install_mode : 'rwxr-xr-x'
             )
-o = join_paths(dir_bin, 'enlightenment_remote')
-meson.add_install_script(chmod, 'a+r+x', o)
