--- a/data/config/mobile/meson.build
+++ b/data/config/mobile/meson.build
@@ -10,20 +10,18 @@ src = [
 i = 0
 foreach cd: src
   custom_target(' '.join(['config_dist', dir, cd]),
-		input      : cd + '.src',
-		output     : cd + '.cfg',
-		command    : [eet_cmd, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
-		install    : true,
-		install_dir: join_paths(dir_config, dir)
+		input        : cd + '.src',
+		output       : cd + '.cfg',
+		command      : [eet_cmd, '-e', '@OUTPUT@', 'config', '@INPUT@', '1'],
+		install      : true,
+		install_dir  : join_paths(dir_config, dir),
+                install_mode : 'rw-r--r--'
                )
   i += 1
 endforeach
 install_data([ 'enlightenment-' + dir + '.png',
                'profile.desktop'
              ],
-             install_dir: join_paths(dir_config, dir)
+             install_dir  : join_paths(dir_config, dir),
+             install_mode : 'rw-r--r--'
             )
-foreach cd: src
-  o = join_paths(dir_config, dir, cd + '.cfg')
-  meson.add_install_script(chmod, 'a+r', o)
-endforeach
