mixer: factorize backend emix infra
Summary:
The mixer gadgets suffer of a bad design between old and new gadget infra.
This commit refactorize the mixer backend to get only one instance
between old and new gadget. This resolve many problems as e_client_volume
integration or the default_sink choosen in one of this modules.
Now it will be easier to maintain this code and better support when we will
remove old gadget infra.

Reviewers: zmike, devilhorns, stephenmhouston

Reviewed By: zmike

Subscribers: cedric

Tags: #enlightenment-git

Differential Revision: https://phab.enlightenment.org/D7718

--- a/src/modules/mixer/meson.build
+++ b/src/modules/mixer/meson.build
@@ -5,7 +5,8 @@ src = files(
   'e_mod_main.h',
   'gadget/mixer.h',
   'gadget/mixer.c',
-  'gadget/mod.c'
+  'gadget/mod.c',
+  'gadget/backend.c'
  )
 
 mixer_lib = files(
