background: contribute a scenary wallpaper photo.
It's a free photo which was taken by me.

--- a/data/backgrounds/meson.build
+++ b/data/backgrounds/meson.build
@@ -9,6 +9,7 @@ install_data([ 'Brown_Rock_Hi.edj',
                'Mossstring.edj',
                'Motleyrock.edj',
                'Newgrowth.edj',
+               'Ocean_Beach.edj',
                'Orange_Roses.edj',
                'Pattern_Radial.edj',
                'Pattern_Vertical.edj',
