Updating french translation

--- a/src/modules/pager_plain/module.desktop
+++ b/src/modules/pager_plain/module.desktop
@@ -6,7 +6,7 @@ Name[cs]=Přepínač ploch Plain
 Name[de]=Pager Plain
 Name[eo]=Tabulpaĝilo Plain
 Name[es]=Paginador Plain
-Name[fr]=Miniature des bureaux Plain
+Name[fr]=Miniature des bureaux ordinaire
 Name[gl]=Paxinador Plain
 Name[hu]=Lapozó Plain
 Name[it]=Pager (senza miniature)
