--- a/src/modules/conf_shelves/module.desktop
+++ b/src/modules/conf_shelves/module.desktop
@@ -8,7 +8,7 @@ Name[el]=Ράφια
 Name[eo]=Bretoj
 Name[es]=Contenedores
 Name[fi]=Hyllyt
-Name[fr]=Racks
+Name[fr]=Rayons
 Name[gl]=Paneis
 Name[hu]=Polcok
 Name[it]=Mensole
@@ -27,7 +27,7 @@ Comment[de]=Regalkonfigurationsdialog
 Comment[eo]=Dialogo de agordo de bretoj.
 Comment[es]=Diálogo de configuración del contenedor.
 Comment[fi]=Hyllyn asetusikkuna.
-Comment[fr]=Interface de configuration du rack.
+Comment[fr]=Interface de configuration du rayon.
 Comment[gl]=Diálogo de configuración do panel.
 Comment[hu]=Ezzel a modullal a polcok beállításait tudod elvégezni.
 Comment[it]=Interfaccia per la configurazione delle mensole portamoduli.
