profile - mobile - disable it as it really has nothing useful in it

--- a/data/config/meson.build
+++ b/data/config/meson.build
@@ -16,6 +16,6 @@ custom_target('profile.src',
              )
 
 subdir('default')
-subdir('mobile')
+#subdir('mobile')
 subdir('standard')
 subdir('tiling')
