Updating french and italian translations

--- a/src/modules/geolocation/module.desktop
+++ b/src/modules/geolocation/module.desktop
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Type=Link
 Name=Geolocation
+Name[fr]=Géolocalisation
 Comment=Geolocation information
+Comment[fr]=Informations de géolocalisation
 Comment[it]=Informazioni sulla geolocalizzazione
 Icon=e-module-geolocation
 X-Enlightenment-ModuleType=utils
