--- a/src/modules/start/module.desktop
+++ b/src/modules/start/module.desktop
@@ -8,7 +8,7 @@ Name[el]=Μενού εκκίνησης
 Name[eo]=Starto
 Name[es]=Inicio
 Name[fi]=Käynnistä
-Name[fr]=Démarrer
+Name[fr]=Commencer
 Name[gl]=Inicio
 Name[hu]=Start menü
 Name[ja]=スタート
@@ -27,7 +27,7 @@ Comment[el]=Το κουμπί για το μενού εκκίνησης του E
 Comment[eo]=Ekvivalenta "starto"-butono por Enlightenment.
 Comment[es]=El equivalente al botón "Inicio" en Enlightenment.
 Comment[fi]=Enlightenmentin vastike "Käynnistä"-napille.
-Comment[fr]=La version Enlightenment du menu de démarrage.
+Comment[fr]=L'équivalent du bouton de démarrage pour Enlightenment.
 Comment[gl]=O equivalente ó botón "Inicio" en Enlightenment.
 Comment[hu]=Enlightenment Start menü gombja.
 Comment[it]=L'equivalente del bottone "Avvio" in Enlightenment.
