--- a/src/modules/teamwork/module.desktop
+++ b/src/modules/teamwork/module.desktop
@@ -14,6 +14,7 @@ Comment[ca]=Enlightenment és un jugador d'equip
 Comment[de]=Enlightenment ist ein Mannschaftsspieler
 Comment[eo]=Enlightenment estas skipa ludanto
 Comment[fi]=Enlightenment on tiimipelaaja
+Comment[fr]=Enlightenment joue en équipe
 Comment[it]=Enlightenment è giocatore in un team
 Comment[ms]=Enlightenment Adalah Pemain Pasukan
 Comment[ru]=Enlightenment — командный игрок
