--- a/src/modules/tiling/module.desktop
+++ b/src/modules/tiling/module.desktop
@@ -21,7 +21,7 @@ Comment[de]=Positionierung und Größenänderung der Fensterkacheln
 Comment[eo]=Poziciigi kaj regrandigi viajn fenestrojn kaheligante.
 Comment[es]=Posicione/redimensione sus ventanas en mosaicos.
 Comment[fi]=Asettelee ikkunasi limittäen.
-Comment[fr]=Place/Redimensionne les fenêtres sans les superposer.
+Comment[fr]=Réarrange les fenêtres par juxtaposition, sans les superposer.
 Comment[gl]=Posicione/redimensione as súas xanelas en mosaicos.
 Comment[it]=Posiziona/ridimensiona le finestre disponendole in griglia.
 Comment[ms]=Posisi/Saiz semula penjubinan tetingkap anda.
