--- a/src/modules/wireless/module.desktop
+++ b/src/modules/wireless/module.desktop
@@ -1,8 +1,10 @@
 [Desktop Entry]
 Type=Link
 Name=Wireless
+Name[fr]=Sans fil
 GenericName=Wireless
 Comment=Manage wifi connections
 Comment[it]=Gestisce le connessioni wifi
+Comment[fr]=Gestion des connexions Wi-Fi
 Icon=e-module-wireless
 X-Enlightenment-ModuleType=system
