--- a/src/modules/wl_desktop_shell/module.desktop
+++ b/src/modules/wl_desktop_shell/module.desktop
@@ -5,7 +5,7 @@ Name[ca]=Escriptori shell Wayland
 Name[de]=Wayland-Schreibtischschale
 Name[eo]=Labortabla ĉelo de Wayland
 Name[fi]=Wayland-työpöytäliittymä
-Name[fr]=Interface système de bureau Wayland
+Name[fr]=Protocole d'affichage Wayland
 Name[it]=Desktop shell per Wayland
 Name[ms]=Shell Desktop Wayland
 Name[sr]=Шкољка радне површи Вејленда
@@ -15,7 +15,7 @@ Comment[ca]=Escriptori Shell Enlightenment Wayland
 Comment[de]=Enlightenment-Wayland-Schreibtischschale
 Comment[eo]=Labortabla ŝelo de Enlightenment por Wayland
 Comment[fi]=Enlightenmentin Wayland-työpöytäliittymä
-Comment[fr]=Interface système de bureau Wayland pour Enlightenment
+Comment[fr]=Implémentation du protocole Wayland pour Enlightenment
 Comment[it]=Desktop shell per Wayland di Enlightenment
 Comment[ms]=Shell Desktop Wayland Enlightenment
 Comment[sr]=Шкољка Просвећења радне површи Вејланда
