wizard - missing bluez5 service checks for enabling bluez5 module
we were missing this - add it in like connman for release.

--- a/src/modules/wizard/meson.build
+++ b/src/modules/wizard/meson.build
@@ -22,6 +22,7 @@ if get_option(m) == true
     'page_090',
     'page_100',
     'page_110',
+    'page_115',
     'page_120',
     'page_130',
     'page_150',
