Updating french translation

--- a/src/modules/fileman/module.desktop
+++ b/src/modules/fileman/module.desktop
@@ -6,7 +6,7 @@ Name[de]=EFM (Starter)
 Name[eo]=Enlightenment dosieradministrilo (lanĉilo)
 Name[es]=EFM (Lanzador)
 Name[fi]=EFM (Käynnistin)
-Name[fr]=File manager
+Name[fr]=Gestionnaire de fichiers (EFM)
 Name[gl]=EFM (Iniciador)
 Name[it]=EFM
 Name[ms]=EFM (Pemula)
