--- a/src/modules/fileman_opinfo/module.desktop
+++ b/src/modules/fileman_opinfo/module.desktop
@@ -25,7 +25,7 @@ Comment[de]=Kann auf dem Schreibtisch oder in einem Regal plaziert werden.
 Comment[eo]=Enmetebla sur la labortablon aŭ en breton.
 Comment[es]=Se puede colocar en el escritorio o en un cotenedor.
 Comment[fi]=Voidaan asettaa työpöydälle tai hyllylle.
-Comment[fr]=Peut être placé sur le bureau ou dans un rack.
+Comment[fr]=Peut être placé sur le bureau ou sur un rayon.
 Comment[gl]=Pódese colocar no escritorio ou nun panel.
 Comment[it]=Può essere messo sul desktop o su una mensola.
 Comment[ms]=Boleh diletak pada desktop atau diatas para.
