--- a/src/modules/xwayland/meson.build
+++ b/src/modules/xwayland/meson.build
@@ -5,7 +5,7 @@ src = files(
 
 no_icon = true
 
-if get_option('wayland') != true
+if get_option('wl') != true
   disable = true
 else
   xwayland = find_program('Xwayland')
