--- a/data/etc/sysactions.conf.in
+++ b/data/etc/sysactions.conf.in
@@ -50,9 +50,9 @@ action:   hibernate      @HIBERNATE@
 action:   /bin/mount     @MOUNT@
 action:   /bin/umount    @UMOUNT@
 action:   /usr/bin/eject @EJECT@
-action:   l2ping         /usr/bin/l2ping
-action:   rfkill-unblock /bin/rfkill unblock
-action:   rfkill-block   /bin/rfkill block
+action:   l2ping         @L2PING@
+action:   rfkill-unblock @RFKILL@ unblock
+action:   rfkill-block   @RFKILL@ block
 
 # root is allowed to do anything - but it needs to be here explicitly anyway
 user:     root      allow: *
