--- a/data/session/meson.build
+++ b/data/session/meson.build
@@ -6,12 +6,12 @@ e_desktop = configure_file(input        : 'enlightenment.desktop.in',
                configuration: desktop_config
               )
 
+if config_h.has('HAVE_WAYLAND') == true
+	install_data(e_desktop,
+		install_dir  : join_paths(dir_data, 'wayland-sessions'))
+endif
+
 if config_h.has('HAVE_WAYLAND_ONLY') == false
 	install_data(e_desktop,
 		install_dir  : join_paths(dir_data, 'xsessions'))
-endif
-
-if config_h.has('HAVE_WAYLAND') == false
-	install_data(e_desktop,
-		install_dir  : join_paths(dir_data, 'wayland-sessions'))
 endif
