e build fix - make uuid an explicit dep of gadget loader
fix build break thanks to latest 1.23 bet bleeding edge efl.

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -577,7 +577,8 @@ if config_h.has('HAVE_WAYLAND') == true
 		name_prefix: '',
 		include_directories: include_directories('../..'),
 		dependencies: [
-      dep_dl,
+			dep_dl,
+			dependency('uuid'),
 			dependency('elementary'),
 			dependency('ecore-wl2'),
 			dependency('wayland-client'),
