e - add polkit module to add an auth agent into e
new feature - polkit auth agent support partly in core (need to have
the pam setuid root auth tool respond via dbus) and partly a module
(the agent dbus protocol handling and setup as well as auth gui). this
took me a while even with all the docs to work out how polkit works...
it was really fussy and its data structs are an extra pain in the butt
to craft with eldbus, but i managed it. not everything is supported
but the core basics are there and this can be built on.

right now the gui is really basic, but does the job.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -155,6 +155,10 @@ option('lokker',
 	type: 'boolean',
 	value: true,
 	description: 'enable lokker module: (default=true)')
+option('polkit',
+	type: 'boolean',
+	value: true,
+	description: 'enable polkit module: (default=true)')
 option('luncher',
 	type: 'boolean',
 	value: true,
