e alert - use the provided font ttf for the alert
this enforces the look i wanted, and also makes this work when no sans
or mono font exist.

--- a/meson.build
+++ b/meson.build
@@ -360,6 +360,7 @@ subdir('data/desktop')
 subdir('data/etc')
 subdir('data/favorites')
 subdir('data/flags')
+subdir('data/fonts')
 subdir('data/icons')
 subdir('data/images')
 subdir('data/input_methods')
