Updating french translation

--- a/data/config/default/profile.desktop
+++ b/data/config/default/profile.desktop
@@ -31,7 +31,7 @@ Comment[el]=Επιλέξτε αυτό για να ξεκινήσετε την α
 Comment[eo]=Elektu tion por restartigi la pravalorizan agordon.
 Comment[es]=Seleccione esto para reestablecer la configuración inicial.
 Comment[fi]=Valitse tämä käynnistääksesi alkuasetusvelhon.
-Comment[fr]=Sélectionnez ceci pour retrouver la configuration par défaut et reprendre le paramétrage initial.
+Comment[fr]=Sélectionnez ceci pour recommencer la configuration initiale.
 Comment[gl]=Seleccione isto para volverr á configuración inicial.
 Comment[hu]=Válaszd ezt az alap beállítáok megismétléséhez.
 Comment[it]=Selezionare questo per riprendere la configurazione iniziale.
