shot - add delay button in shot dialog to try again with a delay
also adds an action you can bind with an explicitly provided delay
time for customization in bindings if you always use the same timeout.

@feature

--- a/src/modules/shot/meson.build
+++ b/src/modules/shot/meson.build
@@ -4,7 +4,8 @@ src = files(
   'e_mod_preview.c',
   'e_mod_edit.c',
   'e_mod_save.c',
-  'e_mod_share.c'
+  'e_mod_share.c',
+  'e_mod_delay.c'
 )
 
 if get_option(m) == true
