Bring back e_sys just for mount, unmount and eject
This reverts commit a43869cdc096413d5994b5011e57bc7d753d4885.

I still need this for efm... i forgot... :( So bring back the bits we
need until it's no longer needed...

--- a/data/etc/meson.build
+++ b/data/etc/meson.build
@@ -1,3 +1,26 @@
+MOUNT     = '/bin/mount'
+UMOUNT    = '/bin/umount'
+EJECT     = '/usr/bin/eject'
+
+if host_machine.system().contains('bsd') == true
+  MOUNT     = '/sbin/mount'
+  UMOUNT    = '/sbin/umount'
+  EJECT     = '/usr/sbin/cdcontrol eject'
+endif
+
+sysactions = configuration_data()
+sysactions.set('MOUNT'    , MOUNT)
+sysactions.set('UMOUNT'   , UMOUNT)
+sysactions.set('EJECT'    , EJECT)
+
+if get_option('install-sysactions')
+  configure_file(input        : 'sysactions.conf.in',
+                 output       : 'sysactions.conf',
+                 install_dir  : join_paths(dir_sysconf, 'enlightenment'),
+                 configuration: sysactions
+                )
+endif
+
 if get_option('install-enlightenment-menu')
   install_data('e-applications.menu',
                install_dir: join_paths(dir_sysconf, 'xdg/menus')
