e - wallpaper gen - generate multiple resolutions for wallpapers
pre-scale a bunch of resolutions for generated wallpaper files that
intersect with common resolution sizes so e will automatically load
the nearest resolution to be more efficient on load to only decode
what is needed. a bi-product is that e now has a wallapper gen
tool that is simpler than writing your own edc files... :)

@feature

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -513,10 +513,10 @@ executable('enlightenment_elm_cfgtool',
            install            : true
           )
 
-executable('enlightenment_static_grabber',
-           [ 'e_static_grab.c' ],
+executable('enlightenment_wallpaper_gen',
+           [ 'e_wallpaper_gen_main.c' ],
            include_directories: include_directories('../..'),
-           dependencies       : [ dep_eina, dep_eet ],
+           dependencies       : [ dep_elementary ],
            install_dir        : dir_e_utils,
            install            : true
           )
