backlight - add ddc support via libddcutil
This adds ddc monitor control and glues it into the backlight system.
A result of this is now backlgiht control gadgets work screen by
screen and even on desktop monitors as well as on a laptop panel. If
you now put a backlight gadget on a shelf on each screen... it will
control THAT screen's backlight.

This requires libddcutil to be installed. That will require i2c
modules (i2c-dev specifically). This means that this is likely not
going to do anything useful on bsd's... unless libddcutil happens to
work there by chance.

so install ddcutil/libddcutil. ensure it's in ld.so.conf so setuid
root processes find it (as LD_LIBRARY_PATH won't help) and enjoy your
new funcky per-screen backlight controls... :)

@feature

--- a/src/bin/system/meson.build
+++ b/src/bin/system/meson.build
@@ -2,6 +2,7 @@ src = [
   'e_system_main.c',
   'e_system_inout.c',
   'e_system_backlight.c',
+  'e_system_ddc.c',
   'e_system_storage.c',
   'e_system_power.c',
   'e_system_rfkill.c',
