Updating french translation

--- a/src/modules/backlight/module.desktop
+++ b/src/modules/backlight/module.desktop
@@ -21,7 +21,7 @@ Comment[de]=Hintergrundbeleuchtungschieberegler
 Comment[eo]=Akcesorajo de kontrolo-ŝovilo de fona lumo
 Comment[es]=Deslizador para controlar la iluminación.
 Comment[fi]=Taustavalon ohjaussäädinvempain
-Comment[fr]=Slider de contrôle du rétroéclairage.
+Comment[fr]=Gadget de configuration du rétroéclairage.
 Comment[gl]=Cursor para controlar a iluminación.
 Comment[it]=Fornisce un cursore per il controllo della retroilluminazione.
 Comment[ja]=バックライト調整ガジェット
