update gadget runner to (stabilized) efl api
efl-wl -> efl-canvas-wl

--- a/meson.build
+++ b/meson.build
@@ -305,7 +305,7 @@ if get_option('wl') == true
   dir_wayland_protocols = wayland_protocols.get_pkgconfig_variable('pkgdatadir')
   wayland_version = '>= 1.11.0'
   dep_wayland = [ dependency('ecore-wl2'),
-                  dependency('efl-wl'),
+                  dependency('efl-canvas-wl'),
                   dependency('wayland-server' , version: wayland_version),
                   dependency('wayland-client' , version: wayland_version),
                   wayland_protocols,
@@ -321,7 +321,7 @@ if get_option('wl') == true
   endif
   requires_wayland = ' '.join([ 'wayland-protocols >= 1.12',
                                 'ecore-wl2',
-                                'efl-wl',
+                                'efl-canvas-wl',
                                 requires_drm,
                                 ' '.join(['wayland-server' , wayland_version]),
                                 ' '.join(['wayland-client' , wayland_version]),
