emixer.png: install in correct place.
Icon not displaying. Install in hicolor as per FDO.

--- a/src/modules/mixer/meson.build
+++ b/src/modules/mixer/meson.build
@@ -46,7 +46,7 @@ if get_option(m) == true
                install_dir: join_paths(dir_data, 'applications')
               )
   install_data('emixer.png',
-               install_dir: join_paths(dir_data, 'pixmaps')
+               install_dir: join_paths(dir_data, 'icons/hicolor/128x128/apps')
               )
 
   executable('emixer',
